# physical-ai-humanoid-robotics-book

./: .gitignore  README.md  package.json  temp_report_part.md  temp_spec_input.json
.claude/: settings.local.json
backend/: __init__.py  api.py  populate_qdrant.py  retriving.py
backend/docs/M1-ROS2/: ROS2-Control.md  ROS2-Packages.md
backend/docs/M2-Digital-Twin/: Sim-Sensors.md
backend/docs/M3-Isaac/: Isaac-ROS.md  Isaac-Sim.md
backend/docs/specs/: spec.md
backend/docs/tasks/: tasks-v1.md
docusaurus-book/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docusaurus-book/.docusaurus/: client-modules.js  docusaurus.config.mjs
docusaurus-book/api/: query.js
docusaurus-book/docs/: index.md  index.mdx
docusaurus-book/docs/M3-Isaac/: RL-Intro.md
physical-ai-backend/: .gitignore  README.md  app.py  requirements.txt
physical-ai-backend/backend/: api.py  ingest_data.py  pyproject.toml  requirements.txt
physical-ai-backend/backend/docs/M1-ROS2/: Transforms-TF2.md
physical-ai-backend/backend/docs/M4-VLA/: Capstone.md  LLM-Cognitive-Planning.md  Voice-to-Action.md
physical-ai-backend/backend/docs/constitution/: 0001-update-physical-ai-humanoid-robotics-constitution.constitution.prompt.md
physical-ai-backend/docs/: index.mdx
specs/001-rag-content-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-retrieval-validation/: plan.md  spec.md  tasks.md
specs/003-rag-agent-backend/: plan.md  spec.md  tasks.md
specs/004-rag-chatbot-frontend/: plan.md  spec.md  tasks.md
(+17 files in other folders)
